--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num-derive = "0.3"
+num-traits = "0.2"
 strum = "0.24"
 strum_macros = "0.24"
