--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 num-derive = "0.3"
 num-traits = "0.2"
+once_cell = "1.18.0"
 strum = "0.24"
 strum_macros = "0.24"
 
